Change img src to match file structure

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 <div class="main-component">
   <div class="about">
-    <div class="image-holder"><img src="./assets/images/avatar-jessica.jpeg" alt="avatar"></div>
+    <div class="image-holder"><img src="avatar-jessica.jpeg" alt="avatar"></div>
       <div class="about-info">
           <p class="name">Jessica Randall</p>
           <p class="place">London, United Kingdom</p>
